fixed hero button dark mode

--- a/app/components/Hero/HeroButton.css
+++ b/app/components/Hero/HeroButton.css
@@ -17,11 +17,21 @@
     user-select: none;
     position: relative;
     background: var(--lightFooter);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25), 0px 0px 12px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.1), 0px 0px 14px rgba(0, 0, 0, 0.2);
+    transition: scale 200ms ease, box-shadow 200ms ease;
+}
+
+@media (hover: hover) {
+    .hero-button:hover {
+        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1), 0px 0px 24px rgba(0, 0, 0, 0.2);
+        scale: 1.0005;
+        transition: scale 200ms ease, box-shadow 200ms ease;
+    }
 
 }
 
 .hero-button-content {
+    z-index: 15;
     padding-left: 22px;
     padding-right: 9px;
     display: flex;
